daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
    name: elasticsearch
    namespace: kube-system
spec:
    selector: 
        matchLabels:
            app: elasticsearch
    template:
        metadata:
            labels:
                app: elasticsearch
        spec:
            containers:
            - name: elasticsearch
              image: k8s.gcr.io/fluentd-elasticsearch:1.20
