pod_define_node.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: myapp
spec:
  containers:
    - name: nginx
      image: nginx
  nodeName: gke-standard-cluster-1-default-pool-d324b8f5-xb4c
