pod_hostpath.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: webapp
spec:
  containers:
  - env:
    - name: LOG_HANDLERS
      value: file
    name: event-simulator
    image: kodekloud/event-simulator
    volumeMounts:
    - mountPath: /log
      name: log-volume
    volumes:
    - name: log-volume
      hostPath:
        path: /var/log/webapp
        type: Directory
